--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,7 @@ jobs:
           command: |
             git config --global user.email $GH_EMAIL
             git config --global user.name $GH_NAME
-            chmod +x ./deploy.sh
+            chmod u+x ./deploy.sh
       - store_test_results:
           path: test-results
 
