--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,8 +38,8 @@ jobs:
           command: |
             git config --global user.email $GH_EMAIL
             git config --global user.name $GH_NAME
-            chmod -R u+x ./deploy.sh
-            chmod -R u+x ./node_modules
+            chmod -R u+x .
+            free -m
 
       - run:
           name: Deploy
