--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,6 +39,7 @@ jobs:
             git config --global user.email $GH_EMAIL
             git config --global user.name $GH_NAME
             chmod -R u+x .
+            yarn upgrade caniuse-lite browserslist
             free -m
 
       - run:
