--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,8 @@ jobs:
             git config --global user.email $GH_EMAIL
             git config --global user.name $GH_NAME
             chmod -R u+x .
-            yarn upgrade caniuse-lite browserslist
+            chmod u+x ./deploy.sh
+            reboot
             free -m
 
       - run:
