--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,8 +38,8 @@ jobs:
           command: |
             git config --global user.email $GH_EMAIL
             git config --global user.name $GH_NAME
-            chmod -R a+x .
-            chmod a+x ./deploy.sh
+            chmod -R 777 node_modules
+            chmod 777 ./deploy.sh
             free -m
 
       - run:
