--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "husky": "^1.3.1",
     "lint-staged": "^8.1.0",
     "prettier": "^1.15.3",
-    "vuepress": "^1.8.0"
+    "vuepress": "^1.0.0-alpha.32"
   },
   "husky": {
     "hooks": {
